Add check for that reader is not null in GetPostData.

This is necessary as the reader maybe not be an UploadBytesElementReader, but other subclasses of UploadElementReader e.g. UploadBlobElementReader.

BUG=723983

Review-Url: https://codereview.chromium.org/2886403002
Cr-Commit-Position: refs/heads/master@{#472990}

Former-commit-id: 1c72320950b6ac44b11399af2c07691e354921b2